Small styling changes across Contact, About, SayHi, and Projects. Cleaned up spacing, alignment, and sizing issues from responsiveness

--- a/public/css/projects-display.css
+++ b/public/css/projects-display.css
@@ -96,6 +96,11 @@
   /* justify-content: center; */
 }
 
+.easy-center-align-container {
+  margin-top: 0;
+  text-align: center;
+}
+
 .project-container {
   border: 1px solid #202020;
   border-radius: 8px;
